[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/PixelPlatformerSet/Player.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=24]
[ext_resource path="res://Shader/HitEffect.tres" type="Material" id=28]
[ext_resource path="res://Scenes/Dash.tscn" type="PackedScene" id=33]

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.0
height = 16.0

[sub_resource type="Animation" id=3]
resource_name = "Hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6.48156, 14.3657 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 9, 16 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, -48 )
z_index = 10
collision_layer = 105
collision_mask = 105
script = ExtResource( 24 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 28 )
frames = ExtResource( 1 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -4, 1 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -20 )
current = true
zoom = Vector2( 0.4, 0.4 )

[node name="Effects" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 3 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -4, 1 )
shape = SubResource( 4 )

[node name="AttackArea" type="Area2D" parent="." groups=[
"Sword",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 8, 0 )
shape = SubResource( 5 )
disabled = true

[node name="ComboTimer" type="Timer" parent="."]
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="ComboCooldownTimer" type="Timer" parent="."]

[node name="DeathTimer" type="Timer" parent="."]

[node name="Dash" parent="." instance=ExtResource( 33 )]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="Effects" to="." method="_on_Effects_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="ComboTimer" to="." method="_on_ComboTimer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="timeout" from="ComboCooldownTimer" to="." method="_on_ComboCooldownTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
